# torque_calculator

./: README.md  com.github.alannmartin.torque_calculator.json  meson.build
data/: com.github.alannmartin.torque_calculator.desktop.in  com.github.alannmartin.torque_calculator.gschema.xml  com.github.alannmartin.torque_calculator.metainfo.xml.in  com.github.alannmartin.torque_calculator.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: main.py  meson.build  notebook.ui  torque_calculator.gresource.xml  torque_calculator.in  window.py
